# minisweeper

./: .gitignore  CMakeLists.txt  README.md  build.sh  defines.h  digital_display.cpp  digital_display.h  field.cpp  field.h  game.cpp  game.h  main.cpp  settings.h  tile.cpp  tile.h
